tests/NormalTests/paczka1/fuzzy1/67288275.err
Error in line 2: zNQlNyh A232 37,2
Error in line 9: zNQlNyh S736 31,6
Error in line 3: tnkT A232 81,0
Error in line 8: BcloeneX A537 78,1
Error in line 14: BcloeneX S57 48,5
Error in line 13: 2wTZ9xIq3 A232 92,3
Error in line 27: 2wTZ9xIq3 S57 52,8
